--- a/.github/workflows/master_obrasbibliograficas.yml
+++ b/.github/workflows/master_obrasbibliograficas.yml
@@ -21,10 +21,12 @@ jobs:
         dotnet-version: '3.1.102'
 
     - name: Build with dotnet
-      run: dotnet build --configuration Release
+      run: cd ./ObrasBibliograficas.API 
+           dotnet build --configuration Release
 
     - name: dotnet publish
-      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      run: cd ./ObrasBibliograficas.API
+           dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
