--- a/.github/workflows/master_obrasbibliograficas.yml
+++ b/.github/workflows/master_obrasbibliograficas.yml
@@ -1,39 +1,32 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy ASP.Net Core app to Azure Web App - obrasbibliograficas
-
 on:
   push:
     branches:
       - master
 
+env:
+  AZURE_WEBAPP_NAME: obrasbibliograficasfe   # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: './ObrasBibliograficasFrontEnd/dist/ObrasBibliograficasFrontEnd'      # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: '12.x'                # set this to the node version to use
+
 jobs:
   build-and-deploy:
-    runs-on: windows-latest
-
+    name: Build and Deploy
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-
-    - name: Set up .NET Core
-      uses: actions/setup-dotnet@v1
+    - name: Use Node.js ${{ env.NODE_VERSION }}
+      uses: actions/setup-node@v1
       with:
-        dotnet-version: '3.1.102'
-
-    - name: Build with dotnet
+        node-version: ${{ env.NODE_VERSION }}
+    - name: npm install, build, and test
       run: |
-           cd ./ObrasBibliograficas.API/
-           dotnet build --configuration Release
-
-    - name: dotnet publish
-      run: |
-           cd ./ObrasBibliograficas.API/
-           dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
-
-    - name: Deploy to Azure Web App
+        # Build and test the project, then
+        # deploy to Azure Web App.
+        npm install
+        npm run build --if-present
+    - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'obrasbibliograficas'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_5c8fabad988e4380806dc57a005febf3 }}
-        package: ${{env.DOTNET_ROOT}}/myapp 
+      with: 
+        app-name: obrasbibliograficasfe
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
