--- a/.github/workflows/master_obrasbibliograficas.yml
+++ b/.github/workflows/master_obrasbibliograficas.yml
@@ -22,7 +22,8 @@ jobs:
       run: |
         # Build and test the project, then
         # deploy to Azure Web App.
-        npm install
+        cd ObrasBibliograficasFrontEnd
+        npm install        
         npm run build --if-present
     - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v2
